# Neutron-unf

./: .Doxyfile.swp  CMakeLists.txt  Doxyfile  README.md  gitignore
html/: DUP_8h_source.html  FILEIO_8h_source.html  HVis_8h_source.html  MCMC_8h_source.html  UNCERT_8h_source.html  UNFOLD_8h_source.html  Vis_8h_source.html  annotated.html  classMCMC-members.html  classMCMC.html  classUNCERT_1_1UNCERT-members.html  classUNCERT_1_1UNCERT.html  classUNFOLD_1_1DUP-members.html  classUNFOLD_1_1DUP.html  classUNFOLD_1_1FILEIO-members.html  classUNFOLD_1_1FILEIO.html  classUNFOLD_1_1HVis-members.html  classUNFOLD_1_1HVis.html  classUNFOLD_1_1UNFOLD-members.html  classUNFOLD_1_1UNFOLD.html  classUNFOLD_1_1Vis-members.html  classUNFOLD_1_1Vis.html  classes.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  index.html  my__UnfoldLibs__LinkDef_8h_source.html
include/: DUP.h  FILEIO.h  HVis.h  MCMC.h  UNCERT.h  UNFOLD.h  Vis.h  my_UnfoldLibs_LinkDef.h  standardDeviation.C
latex/: DUP_8h_source.tex  FILEIO_8h_source.tex  HVis_8h_source.tex  MCMC_8h_source.tex  UNCERT_8h_source.tex  UNFOLD_8h_source.tex  Vis_8h_source.tex  annotated.tex  classMCMC.tex  classUNCERT_1_1UNCERT.tex  classUNFOLD_1_1DUP.tex  classUNFOLD_1_1FILEIO.tex  classUNFOLD_1_1HVis.tex  classUNFOLD_1_1UNFOLD.tex  classUNFOLD_1_1Vis.tex  files.tex  md_README.tex  my__UnfoldLibs__LinkDef_8h_source.tex  namespaceUNFOLD.tex  namespaces.tex  refman.tex
references/: Unfolding_MLEM.cpp
scripts/: .Odessa_SIRT_FakeData.C.swo  EJ301DSim.C  EJ315Sim_SIRT.C  EJ315_SIRT.C  Odess_atest.C  Odessa_SIRT_FakeData.C  kill_and_build.sh  mlem_out.root  odessa_matrix.txt  plotResponseMatrix.C  response.root  rootlogon.C
src/: .FILEIO.cc.swp  DUP.cc  FILEIO.cc  HVis.cc  UNCERT.cc  UNCERTBCK.cc  UNFOLD.cc  UNFOLDbck.cc  (+3 more)
(+7 files in other folders)
